--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Please write a typescript project with unit test\r Provide accessible repo of typescript project with unit test.\r Provide how to setup dependency, execute code and run unit test.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
